--- a/assignments/week10/hw/hw.cabal
+++ b/assignments/week10/hw/hw.cabal
@@ -25,7 +25,7 @@ test-suite test
   hs-source-dirs:
     tests
   main-is: Main.hs
-  other-modules: LangParserTest, EvalUnsafeTest
+  other-modules: LangParserTest, EvalUnsafeTest, LangTest
   build-depends:
       containers, base >= 4.7 && < 5
     , tasty >= 0.11.1, tasty-hunit, tasty-quickcheck
