--- a/assignments/week10/hw/hw.cabal
+++ b/assignments/week10/hw/hw.cabal
@@ -28,5 +28,5 @@ test-suite test
   other-modules: LangParserTest, EvalUnsafeTest, LangTest
   build-depends:
       containers, base >= 4.7 && < 5
-    , tasty >= 0.11.1, tasty-hunit, tasty-quickcheck
+    , tasty >= 0.11.1, tasty-hunit, tasty-quickcheck, QuickCheck
     , hw
